<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lock0134.mobileguifinalproject.MovieInformation">

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="4dp"
        android:text="@string/downloadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieTextView"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/MovieInformation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadButton" />

    <ListView
        android:id="@+id/movieListView"
        android:layout_width="368dp"
        android:layout_height="344dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieButton" />

    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginLeft="16dp"
        android:text="@string/addMovieButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTextView" />

    <Button
        android:id="@+id/infoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="2dp"
        android:text="@string/Information"
        app:layout_constraintEnd_toEndOf="@+id/movieListView"
        app:layout_constraintTop_toBottomOf="@+id/movieTextView" />
</android.support.constraint.ConstraintLayout>
