<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lock0134.mobileguifinalproject.OCTranspo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/busToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/AlertDialog.AppCompat.Light"
            android:elevation="4dp"/>

        <EditText
            android:id="@+id/search_stops"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textView"
            android:layout_toStartOf="@+id/Sbutton"
            android:hint="@string/busHint" />

        <Button
            android:id="@+id/Sbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/search_stops"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textView"
            android:text="@string/busSearch" />

        <ListView
            android:id="@+id/stops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_stops"
            android:layout_centerHorizontal="true">

        </ListView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/instructions" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
