<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nFrameLayout"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/questionDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#040404"/>

        <EditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:minHeight="150dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#041404"/>

        <TextView
            android:id="@+id/AnswerDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right_answer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#040404"/>

        <EditText
            android:id="@+id/answerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="100dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#040404"/>

        <TextView
            android:id="@+id/accuracyDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Accuracy"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#040404"/>

        <EditText
            android:id="@+id/digits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#040404"/>

        <Button
        android:id="@+id/addQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addB" />

        <Button
            android:id="@+id/deleteQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteB" />





    </LinearLayout>


</FrameLayout>
